CSS Fixes
General CSS fixes to fix layout issues on mobile. Game button CSS defined.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,7 @@ body {
 .project-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 15px;
 }
 
@@ -59,7 +60,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    padding: 20px 0;
+    padding: 20px;
 }
 
 .hero h1, .hero p {
@@ -84,6 +85,24 @@ body {
 
 a.btn {
     display: inline-block;
+}
+
+.game-btn {
+    background: #544aea;
+    border-radius: 50%;
+    padding: 7px 14px;
+    box-shadow: 0 0 10px #453cc6;
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    font-size: 36px;
+    user-select: none;
+    cursor: pointer;
+}
+
+.game-btn:hover {
+    background-color: #453cc6;
+    transition: background-color 0.75s;
 }
 
 footer {
